--- a/src/Acme.BookStore.DbMigrator/appsettings.json
+++ b/src/Acme.BookStore.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=D:\\Again2\\Acme.BookStore\\BookStore.db;"
+    "Default": "Data Source=D:\\Projects\\TestProjects\\Acme.BookStore\\BookStore.db;"
   },
   "OpenIddict": {
     "Applications": {
