--- a/src/Acme.BookStore.HttpApi.Host/appsettings.json
+++ b/src/Acme.BookStore.HttpApi.Host/appsettings.json
@@ -5,7 +5,7 @@
     "RedirectAllowedUrls": "https://localhost:44370"
   },
   "ConnectionStrings": {
-    "Default": "Data Source=D:\\Again2\\Acme.BookStore\\BookStore.db;"
+    "Default": "Data Source=D:\\Projects\\TestProjects\\Acme.BookStore\\BookStore.db;"
   },
   "AuthServer": {
     "Authority": "https://localhost:44359",
